--- a/appsettings.json
+++ b/appsettings.json
@@ -6204,10 +6204,19 @@
                   "Sigla": "",
                   "BarcodeLength": 65,
                   "Icon": "PeopleAlt"
+                },
+                {
+                  "Name": "Metro Croazia",
+                  "Description": "Distinta di Prelievo per Metro Croazia",
+                  "FormId": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341B9",
+                  "Sigla": "",
+                  "BarcodeLength": 65,
+                  "Icon": "NaturePeople"
                 }
 
               ]
             }
+
           ]
         },
         "Wizard": [
@@ -6242,7 +6251,7 @@
                 "Id": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
                 "Assembly": "Blazor.WizardComponent.Client",
                 "Namespace": "Blazor.WizardComponent.Client.Components",
-                "Name": "DistintaCaricoComponent",
+                "Name": "DistintaDiPrelievoComponent",
                 "Title": "Distinta di Prelievo",
                 "Description": "Distinta di Prelievo",
                 "Defaults": [],
@@ -6295,7 +6304,7 @@
                     "FromProperty": "Id",
                     "ToProperty": "Id"
                   }
-      
+
                 ]
               },
               {
@@ -6389,7 +6398,235 @@
                   },
                   {
                     "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
-                    "FromProperty": "NumeroBobine",
+                    "FromProperty": "Lotto",
+                    "ToProperty": "Lotto"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "CodiceArticolo",
+                    "ToProperty": "CodiceArticolo"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "NumeroPallets",
+                    "ToProperty": "NumeroPallets"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+
+                    "FromId": "BFE63956-3F5E-4EDF-92B5-D4B2E52341A7",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "PrimoBarcode"
+                  },
+                  {
+
+                    "FromId": "BFE63956-3F5E-4EDF-92B5-D4B2E52341A7",
+                    "FromProperty": "Type",
+                    "ToProperty": "PrimoBarcodeType"
+                  }
+
+                ]
+              }
+            ]
+          },
+          {
+            "Id": "AFE63957-3F5E-4ECF-92B5-C4B2E5B341B9",
+            "Title": "Distinta di Prelievo",
+            "Components": [
+              {
+                "Id": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "TipoDistintaDiPrelievoComponent",
+                "Title": "Distinta di Prelievo",
+                "Description": "Preparazione Distinta di Prelievo",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Cliente",
+                    "Value": 33078
+                  },
+                  {
+                    "Name": "RagioneSociale",
+                    "Value": "Metro Croazia"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ]
+              },
+              {
+                "Id": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "DistintaDiPrelievoComponent",
+                "Title": "Distinta di Prelievo",
+                "Description": "Distinta di Prelievo",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "NumeroPallet",
+                    "ToProperty": "NumeroPallet"
+                  }
+                ]
+              },
+              {
+                "Id": "ZFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "GestionePrelieviComponent",
+                "Title": "Gestione Prelievi",
+                "Description": "Gestione Prelievi Pallets",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  }
+
+                ]
+              },
+              {
+                "Id": "BFE63956-3F5E-4EDF-92B5-D4B2E52341A7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "QrCodeComponent",
+                "Title": "1. Lettura Qr Code",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "QrCode"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 1000
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 65
+                  },
+                  {
+                    "Name": "MaxLines",
+                    "Value": 1
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": "00|02|11|37|10"
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "IsBarcodeReader",
+                    "ToProperty": "IsBarcodeReader"
+                  }
+                ]
+              },
+              {
+                "Id": "AFE63951-3F5E-4ECF-92B5-D4B2E52341A5",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "RiepilogoDistintaDiPrelievoComponent",
+                "Title": "Riepilogo distinta di prelievo",
+                "Description": "Salvataggio Cartellino",
+                "Defaults": [],
+                "ComponentParameters": [],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "TipoDistinta",
+                    "ToProperty": "TipoDistinta"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Cliente",
+                    "ToProperty": "Cliente"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "RagioneSociale",
+                    "ToProperty": "RagioneSociale"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Lotto",
+                    "ToProperty": "Lotto"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "CodiceArticolo",
+                    "ToProperty": "CodiceArticolo"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "NumeroPallets",
                     "ToProperty": "NumeroPallets"
                   },
                   {
