--- a/appsettings.json
+++ b/appsettings.json
@@ -6259,6 +6259,14 @@
                   {
                     "Name": "IsLocalStorage",
                     "Value": true
+                  },
+                  {
+                    "Name": "QrCodeDataLength",
+                    "Value": 27
+                  },
+                  {
+                    "Name": "QrCodeDataInfo",
+                    "Value": "[{'Name': 'Articolo','Position': 2,'Length': 14},{'Name': 'Lotto','Position': 18,'Length': 9}]"
                   }
                 ],
                 "DtoParameters": [
@@ -6477,6 +6485,14 @@
                   {
                     "Name": "IsLocalStorage",
                     "Value": true
+                  },
+                  {
+                    "Name": "QrCodeDataLength",
+                    "Value": 27
+                  },
+                  {
+                    "Name": "QrCodeDataInfo",
+                    "Value": "[{'Name': 'Articolo','Position': 2,'Length': 14},{'Name': 'Lotto','Position': 18,'Length': 9}]"
                   }
                 ],
                 "DtoParameters": [
