--- a/appsettings.json
+++ b/appsettings.json
@@ -6371,6 +6371,11 @@
                     "FromId": "BFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
                     "FromProperty": "IsBarcodeReader",
                     "ToProperty": "IsBarcodeReader"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "CodiceArticolo",
+                    "ToProperty": "ValueToCheck"
                   }
                 ]
               },
