--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,8 @@
   "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Parameters": {
-    "Host": "https://ymicqcp2axww2gfaqqlffjthe40sieiu.lambda-url.eu-north-1.on.aws/",
-    "Host1": "https://zxzw6stelkr2o2jemu2zwy4hiy0acdkq.lambda-url.eu-north-1.on.aws",
-    "Host2": "http://localhost",
-    "Port": 5084
+    "Host": "https://3wgr4stxeq5mc4ic2xvpbd5l4i0eaylh.lambda-url.eu-north-1.on.aws/",
+    "Port": null
   },
   "Infrastruttures": {
     "WizardInfrastruttures": [
