--- a/appsettings.json
+++ b/appsettings.json
@@ -6374,6 +6374,11 @@
                     "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
                     "FromProperty": "CodiceArticolo",
                     "ToProperty": "ValueToCheck"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-92B5-D4B2E52341A7",
+                    "FromProperty": "Lotto",
+                    "ToProperty": "SecondValueToCheck"
                   }
                 ]
               },
