--- a/appsettings.json
+++ b/appsettings.json
@@ -227,6 +227,14 @@
                   "Icon": "RepeatOneOn"
                 },
                 {
+                  "Name": "(NI) New Indy",
+                  "Description": "New Indy",
+                  "FormId": "1E664976-379A-43BC-A76F-8010D9B43650",
+                  "Sigla": "NI",
+                  "BarcodeLength": 12,
+                  "Icon": "PeopleOutline"
+                },
+                {
                   "Name": "(XX) Cartiera Non Codificata",
                   "Description": "Cartiera Non Codificata",
                   "FormId": "80E48F6B-CDC8-47EE-96C0-41B6F473E7D2",
@@ -6167,6 +6175,202 @@
                   },
                   {
                     "FromId": "2E664976-379E-43BD-A76F-8010D9B43650",
+                    "FromProperty": "Type",
+                    "ToProperty": "PrimoBarcodeType"
+                  }
+                ]
+              }
+
+            ]
+
+
+          },
+          {
+            "Id": "1E664976-379A-43BC-A76F-8010D9B43650",
+            "Title": "Maschera di Lettura Barcode",
+            "Components": [
+              {
+                "Id": "1E664976-379B-43BC-A76F-8010D9B43650",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "TipoDistintaComponent",
+                "Title": "Tipo Distinta di Carico",
+                "Description": "Tipo Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "FornitoreId",
+                    "Value": "NI"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ]
+              },
+              {
+                "Id": "1E664976-379C-43BC-A76F-8010D9B43650",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "DistintaCaricoComponent",
+                "Title": "Distinta di Carico",
+                "Description": "Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  }
+                ]
+              },
+              {
+                "Id": "1E664976-379D-43BD-A76F-8010D9B43650",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "CartellinoComponent",
+                "Title": "Foto Cartellino",
+                "Description": "Esempio di cartellino",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Foto",
+                    "Value": "./cartellinoimages/NewIndy.jpg"
+                  },
+                  {
+                    "Name": "Istruzioni",
+                    "Value": "Leggere etichetta evidenziata come numero 1"
+                  }
+                ]
+              },
+              {
+                "Id": "1E664976-379E-43BD-A76F-8010D9B43650",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "Lettura Primo Barcode",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "SerialNumber"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 12
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "IsBarcodeReader",
+                    "ToProperty": "IsBarcodeReader"
+                  }
+                ]
+              },
+              {
+                "Id": "1E664976-379F-43BC-A76F-8010D9B43650",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "RiepilogoComponent",
+                "Title": "Riepilogo",
+                "Description": "Salvataggio Cartellino",
+                "Defaults": [],
+                "ComponentParameters": [],
+                "DtoParameters": [
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "TipoDistinta",
+                    "ToProperty": "TipoDistinta"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "1E664976-379C-43BC-A76F-8010D9B43650",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "1E664976-379B-43BC-A76F-8010D9B43650",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "1E664976-379C-43BC-A76F-8010D9B43650",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+                    "FromId": "1E664976-379E-43BD-A76F-8010D9B43650",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "PrimoBarcode"
+                  },
+                  {
+                    "FromId": "1E664976-379E-43BD-A76F-8010D9B43650",
                     "FromProperty": "Type",
                     "ToProperty": "PrimoBarcodeType"
                   }
