--- a/appsettings.json
+++ b/appsettings.json
@@ -235,6 +235,14 @@
                   "Icon": "PeopleOutline"
                 },
                 {
+                  "Name": "(KL) Klabin",
+                  "Description": "Klabin",
+                  "FormId": "9B49FAAA-695D-4A60-A94B-9F4F4C30230F",
+                  "Sigla": "KL",
+                  "BarcodeLength": 10,
+                  "Icon": "PestControl"
+                },
+                {
                   "Name": "(XX) Cartiera Non Codificata",
                   "Description": "Cartiera Non Codificata",
                   "FormId": "80E48F6B-CDC8-47EE-96C0-41B6F473E7D2",
@@ -6184,6 +6192,263 @@
             ]
 
 
+          },
+          {
+            "Id": "9B49FAAA-695D-4A60-A94B-9F4F4C30230F",
+            "Title": "Maschera di Lettura Barcode",
+            "Components": [
+              {
+                "Id": "9B49FAAA-695D-4A60-A94B-9F4F4C30231F",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "TipoDistintaComponent",
+                "Title": "Tipo Distinta di Carico",
+                "Description": "Tipo Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "FornitoreId",
+                    "Value": "KL"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ]
+              },
+              {
+                "Id": "9B49FAAA-695D-4A60-A94B-9F4F4C30232F",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "DistintaCaricoComponent",
+                "Title": "Distinta di Carico",
+                "Description": "Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30231F",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30231F",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30231F",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30231F",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30231F",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  }
+                ]
+              },
+              {
+                "Id": "9B49FAAA-695D-4A60-A94B-9F4F4C30233F",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "CartellinoComponent",
+                "Title": "Foto Cartellino",
+                "Description": "Esempio di cartellino",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Foto",
+                    "Value": "./cartellinoimages/KL_KlabinEvo.jpg"
+                  },
+                  {
+                    "Name": "Istruzioni",
+                    "Value": "Leggere etichetta evidenziata come numero 1 ed etichetta come  numero 2"
+                  }
+                ]
+              },
+              {
+                "Id": "9B49FAAA-695D-4A60-A94B-9F4F4C30234F",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "1. Lettura Roll Number",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [
+                ],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "SerialNumber"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 10
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "WFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  },
+                  {
+                    "FromId": "WFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "IsBarcodeReader",
+                    "ToProperty": "IsBarcodeReader"
+                  }
+                ]
+              },
+              {
+                "Id": "9B49FAAA-695D-4A60-A94B-9F4F4C30235F",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "2. Lettura Roll Data",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [
+                ],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "Info"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 18
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "WFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  }
+                ]
+              },
+              {
+                "Id": "9B49FAAA-695D-4A60-A94B-9F4F4C30236F",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "RiepilogoComponent",
+                "Title": "Riepilogo",
+                "Description": "Salvataggio Cartellino",
+                "Defaults": [],
+                "ComponentParameters": [],
+                "DtoParameters": [
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30232F",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30232F",
+                    "FromProperty": "TipoDistinta",
+                    "ToProperty": "TipoDistinta"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30232F",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30232F",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30232F",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30232F",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30233F",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "PrimoBarcode"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30234F",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "SecondoBarcode"
+                  },
+                  {
+
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30233F",
+                    "FromProperty": "Type",
+                    "ToProperty": "PrimoBarcodeType"
+                  },
+                  {
+                    "FromId": "9B49FAAA-695D-4A60-A94B-9F4F4C30234F",
+                    "FromProperty": "Type",
+                    "ToProperty": "SecondoBarcodeType"
+                  }
+                ]
+              }
+            ]
           },
           {
             "Id": "1E664976-379A-43BC-A76F-8010D9B43650",
