--- a/appsettings.json
+++ b/appsettings.json
@@ -199,7 +199,7 @@
                   "Description": "Suzano S.A.",
                   "FormId": "2E664976-379A-43BC-A76F-8010D9B43649",
                   "Sigla": "SZ",
-                  "BarcodeLength": 5,
+                  "BarcodeLength": 14,
                   "Icon": "SpeakerGroup"
                 },
                 {
@@ -4832,7 +4832,7 @@
                 "ComponentParameters": [
                   {
                     "Name": "FornitoreId",
-                    "Value": "ND"
+                    "Value": "BL"
                   },
                   {
                     "Name": "IsLocalStorage",
