--- a/appsettings.json
+++ b/appsettings.json
@@ -265,6 +265,263 @@
         },
         "Wizard": [
           {
+            "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9",
+            "Title": "Maschera di Lettura Barcode",
+            "Components": [
+              {
+                "Id": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "TipoDistintaComponent",
+                "Title": "Tipo Distinta di Carico",
+                "Description": "Tipo Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "FornitoreId",
+                    "Value": "DSI"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ]
+              },
+              {
+                "Id": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "DistintaCaricoComponent",
+                "Title": "Distinta di Carico",
+                "Description": "Distinta di Carico",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  }
+                ]
+              },
+              {
+                "Id": "AFE63956-3F5E-4ECH-91A6-C4B2E52341A7",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "CartellinoComponent",
+                "Title": "Foto Cartellino",
+                "Description": "Esempio di cartellino",
+                "Defaults": [],
+                "ComponentParameters": [
+                  {
+                    "Name": "Foto",
+                    "Value": "./cartellinoimages/DsSmith.jpg"
+                  },
+                  {
+                    "Name": "Istruzioni",
+                    "Value": "Leggere etichetta evidenziata come numero 1 ed etichetta come  numero 2"
+                  }
+                ]
+              },
+              {
+                "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "1. Lettura Roll Number",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [
+                ],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "SerialNumber"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 14
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "IsBarcodeReader",
+                    "ToProperty": "IsBarcodeReader"
+                  }
+                ]
+              },
+              {
+                "Id": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A6",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "BarcodeComponent",
+                "Title": "2. Lettura Roll Data",
+                "Description": "Maschera di gestione Barcode",
+                "Defaults": [
+                ],
+                "ComponentParameters": [
+                  {
+                    "Name": "Type",
+                    "Value": "Info"
+                  },
+                  {
+                    "Name": "Immediate",
+                    "Value": false
+                  },
+                  {
+                    "Name": "InputMaxCharacters",
+                    "Value": 50
+                  },
+                  {
+                    "Name": "BarcodeLength",
+                    "Value": 18
+                  },
+                  {
+                    "Name": "RegexExpression",
+                    "Value": null
+                  },
+                  {
+                    "Name": "HelperText",
+                    "Value": "In caso di inserimento manuale confermare con Enter"
+                  },
+                  {
+                    "Name": "IsLocalStorage",
+                    "Value": true
+                  },
+                  {
+                    "Name": "DebounceInterval",
+                    "Value": 0
+                  }
+                ],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "IsCamera",
+                    "ToProperty": "IsCamera"
+                  }
+                ]
+              },
+              {
+                "Id": "AFE63951-3F5E-4ECF-91A6-D4B2E52341A5",
+                "Assembly": "Blazor.WizardComponent.Client",
+                "Namespace": "Blazor.WizardComponent.Client.Components",
+                "Name": "RiepilogoComponent",
+                "Title": "Riepilogo",
+                "Description": "Salvataggio Cartellino",
+                "Defaults": [],
+                "ComponentParameters": [],
+                "DtoParameters": [
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "Id",
+                    "ToProperty": "Id"
+                  },
+                  {
+                    "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "TipoDistinta",
+                    "ToProperty": "TipoDistinta"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "FornitoreId",
+                    "ToProperty": "FornitoreId"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "Description",
+                    "ToProperty": "Description"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "Date",
+                    "ToProperty": "Date"
+                  },
+                  {
+                    "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                    "FromProperty": "NumeroBobine",
+                    "ToProperty": "NumeroBobine"
+                  },
+                  {
+
+                    "FromId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "PrimoBarcode"
+                  },
+                  {
+                    "FromId": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A6",
+                    "FromProperty": "Barcode",
+                    "ToProperty": "SecondoBarcode"
+                  },
+                  {
+
+                    "FromId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
+                    "FromProperty": "Type",
+                    "ToProperty": "PrimoBarcodeType"
+                  },
+                  {
+                    "FromId": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A6",
+                    "FromProperty": "Type",
+                    "ToProperty": "SecondoBarcodeType"
+                  }
+                ]
+              }
+            ]
+          },
+          {
             "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341B9",
             "Title": "Maschera di Lettura Barcode",
             "Components": [
